# tyro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TyroWin.sln  imgui.ini  main.cpp  mainOld.cpp  mainOld2.cpp  notes.txt
Source/: CMakeLists.txt  ES2CameraTexture.h  RAEnginePrerequisites.h  buildonly.sh  history.txt  main.cpp  run.sh
Source/Algorithms/MarchingCubes/: RAMarchingCubes.h  RAMarchingCubesTable.h
Source/Core/: CMakeSources.cmake  GLStructures.h  RACamera.cpp  RACameraOld.cpp  RAFileManager.cpp  RAFont.cpp  RAHardwareBuffer.cpp  RAIndexHardwareBuffer.h  RALogManager.h  RAMath.h  RASkeleton.cpp  RATexture.cpp  RATexture.h  RATextureBuffer.cpp  RATextureBuffer.h  RAVertexBufferAccessor.h  RAVisibleSet.cpp  RAVisibleSet.h  RAiOSCamera.cpp  RAiOSCamera.h
Source/Core/ES2/: RAES2BufferTexture.cpp  RAES2BufferTexture.h  RAES2Context.cpp  RAES2Context.h  RAES2CoreVisualEffects.cpp  RAES2CoreVisualEffects.h  RAES2IndexHardwareBuffer.cpp  RAES2OffScreenBuffer.cpp  RAES2OffScreenBuffer.h  RAES2Polyline.cpp  RAES2Polypoint.cpp  RAES2Polypoint.h  RAES2Renderable.cpp  RAES2Renderer.cpp  RAES2Renderer.h  RAES2ShaderProgram.cpp  RAES2ShaderUniforms.h  RAES2Texture2D.cpp  RAES2Texture2D.h  RAES2TriMesh.cpp  RAES2TriMesh.h  RAES2VertexArray.cpp  RAES2VertexArray.h  RAES2VertexFormat.cpp  RAES2VertexFormat.h  RAES2VisualEffect.cpp  RAES2VisualEffect.h  RAES2VisualStates.h
Source/Core/Renderables/: RAES2BBox.h  RAES2DefaultPolyline.cpp  RAES2DefaultPolyline.h  RAES2DefaultTriMesh.cpp  RAES2DefaultTriMesh.h  RAES2Octree.cpp  RAES2Octree.h  RAES2STLMesh.cpp  RAES2STLMesh.h  RAES2StandardMesh.cpp
Source/Core/Scene/: RANode.cpp  RANode.h  RASpatial.cpp  RASpatial.h
Source/Core/Tools/: RASTLExporter.cpp  RASTLLoader.cpp
Source/Engine/: CMakeSources.cmake  Console.cpp  RAAxisAlignedBBox.cpp  RAAxisAlignedBBox.h  RADepthProxy.cpp  RADepthProxy.h  RAES2TextOverlay.cpp  RAES2TextOverlay.h  RAHitProxy.cpp  RAHitProxy.h  RANormalMapProxy.cpp  RAOverlayManager.h  RAPointOctree.cpp  RAPointOctree.h  TyroApp.cpp  TyroApp.h  TyroFileUtils.h  TyroIGLMesh.cpp  TyroIGLMesh.h  TyroTimeLine.cpp  TyroTimeLine.h  TyroWindow.cpp  TyroWindow.h  load_mesh_sequence.cpp  load_mesh_sequence.h  stop_motion_data.cpp  stop_motion_data.h
Source/GraphCutMethods/: CMakeSources.cmake  segmentation.cpp  segmentation.h
Source/GraphCutMethods/GCOLib/: GCoptimization.h  example.cpp
Source/GraphCutMethods/labeling/: labelingStep.cpp  labelingStep.h  run.cpp  setup.h  stop_motion.cpp  stop_motion.h  updateStep.cpp  updateStep.h  utils.cpp  utils.h
Source/GraphCutMethods/segmentation/: segmentation.cpp
Source/Math/: CMakeLists.txt  CMakeSources.cmake  Wm5Bound.cpp  Wm5Core.h  Wm5Mathematics.h  Wm5MathematicsLIB.h  Wm5Transform.cpp  Wm5Transform.inl
Source/Math/Algebra/: Wm5AVector.cpp  Wm5AVector.h  Wm5BandedMatrix.inl  Wm5GMatrix.h  Wm5GMatrix.inl  Wm5GVector.h  Wm5GVector.inl  Wm5HPoint.h  Wm5HQuaternion.cpp  Wm5Matrix3.inl  Wm5Polynomial1.inl  Wm5Quaternion.h  Wm5Vector2.h  Wm5Vector2.inl  Wm5Vector3.inl  Wm5Vector4.inl
Source/Math/Approximation/: Wm5ApprEllipseByArcs2.cpp  Wm5ApprPolyFit2.cpp  Wm5ApprPolyFit3.cpp  Wm5ApprPolyFit4.cpp
Source/Math/Assert/: Wm5Assert.h
Source/Math/Base/: Wm5Math.inl
Source/Math/ComputationalGeometry/: Wm5ConvexHull.cpp  Wm5ConvexHull1.cpp  Wm5ConvexHull2.cpp  Wm5ConvexHull3.cpp  Wm5Delaunay.cpp  Wm5Delaunay1.cpp  Wm5Delaunay2.cpp  Wm5Delaunay3.cpp  Wm5IncrementalDelaunay2.cpp  Wm5TriangulateEC.cpp
Source/Math/Containment/: Wm5ContBox3.cpp  Wm5ContBox3.h  Wm5ContEllipse2MinCR.cpp  Wm5ContEllipsoid3MinCR.cpp  Wm5ContMinCircle2.cpp  Wm5ContMinSphere3.cpp  Wm5ContPointInPolyhedron3.cpp  Wm5ContSeparatePoints2.cpp  Wm5ContSeparatePoints3.cpp
Source/Math/CurvesSurfacesVolumes/: Wm5BSplineBasis.cpp  Wm5BSplineCurve2.cpp  Wm5BSplineCurve3.cpp  Wm5BSplineCurveFit.cpp  Wm5BSplineFitBasis.cpp  Wm5BSplineRectangle.cpp  Wm5BSplineReduction.cpp  Wm5BSplineSurfaceFit.cpp  Wm5BSplineVolume.cpp  Wm5BezierCurve2.cpp  Wm5BezierCurve3.cpp  Wm5CubicPolynomialCurve2.cpp  Wm5CubicPolynomialCurve3.cpp  Wm5Curve2.cpp  Wm5Curve3.cpp  Wm5Curve3.h  Wm5MultipleCurve2.cpp  Wm5MultipleCurve3.cpp  Wm5MultipleCurve3.h  Wm5NURBSCurve2.cpp  Wm5NURBSCurve3.cpp  Wm5NURBSRectangle.cpp  Wm5NaturalSpline1.cpp  Wm5ParametricSurface.cpp  Wm5PolynomialCurve2.cpp  Wm5PolynomialCurve3.cpp  Wm5QuadricSurface.cpp  Wm5RiemannianGeodesic.cpp  Wm5SingleCurve2.cpp  Wm5SingleCurve3.cpp  Wm5TCBSpline2.cpp  (+1 more)
Source/Release2/: cmake_install.cmake
Source/Shaders/: 1.1.pbr.fs  1.1.pbr.fsh  1.1.pbr.vs  1.1.pbr_ao.fs  1.1.pbr_ao.vs  DepthBuffer.vsh  GourandDirectional.vsh  GourandDirectionalWithVColor.vsh  GourandPoint.vsh  Muscle.fs  Muscle.fsh  Muscle.vs  Muscle.vsh  Muscle2.fs  NoLightUniformColor.fsh  OssaBoneShader.fsh  PlateNoLightPackedNormal.vsh  Shadertoy.frag  Shadertoy.vsh  Text.fsh  Text.vsh  TextureShader.vsh  Video.fsh  Video.vsh  WireframeColor.vsh
Source/StopMotion/: AATODO.txt  CMakeSources.cmake  ES2VideoTexture.cpp  ES2VideoTexture.h  TyroAll.h  TyroApp.cpp  TyroApp.h  TyroFileUtils.h  TyroIGLMesh.cpp  TyroIGLMesh.h  TyroTimeLine.h  TyroWindow.cpp  all.h  compute_deformation.cpp  compute_deformation.h  data_smooth.h  eigen_cerealisation.h  kmeans.cpp  kmeans.h  load_mesh_sequence.cpp  load_mesh_sequence.h  matrixnormalize.h  mesh_split.cpp  mesh_split.h  save_mesh_sequence.cpp  slice_isoline.h
Source/tmp/: agent_faces  agent_vert  albert  alicia_vert  backup  bar  bar1  bar2  bar3  bar_ver_cut_vert  bart_faces_horizontal  bartender_hor_faces  bartender_ver_faces  bitch.txt  blobby_faces  blobby_faces2  blobby_new_faces  blobby_new_vert  bunny0  bunny_better  bunny_cut  bunny_faces  bunny_faces_0  bunny_good  bunny_hor_before_cut  bunny_hor_cut_faces  bunny_hor_cut_vert  bunny_horizontal_cut_faces  bunny_horizontal_cut_vertex  bunny_mask  bunny_omegalul  bunny_read_hor_faces  bunny_vert0  bunny_vert1  bunny_vertical_cut_faces  bunny_vertical_cut_vertex  bunny_vet0  dodger  drake_faces  faces  (+45 more)
TyroWin/Source/: CMakeLists.txt  RAEnginePrerequisites.h  handmade.cpp  main.cpp  mainTest.cpp
(+365 files in other folders)
